verif/test/deca/context/invalid/wrong-variable-verif.res
src/test/deca/context/invalid/wrong-variable.deca:11:12: 'x' does not exist in current context of expressions
